# bharat-restro-mvp

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  nginx.conf  pyproject.toml  pyvenv.cfg  requirements.txt  test_api.py
app/: __init__.py  api.py  cli.py  config.py  discover.py  eval.py  export.py  fetch.py  geocode.py  log.py  normalize.py  parse.py  persist.py  resolve.py  robots.py  seed.py  server.py  utils.py  validate.py
app/extract/: __init__.py  address.py  cuisines.py  hours.py  llm_client.py  phone.py  router.py
bharat_resto_mvp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
data/cache/geocode/: cache.sqlite
db/: restaurants.db
frontend/: index.html
gold/: gold_sample.csv  schema.md
models/prompts/: address.json  cuisines.json  hours.json  system.txt
tests/: conftest.py  test_integration.py
